# /***********************************************************************
#  *
#  * Tiary, a terminal-based diary keeping system for Unix-like systems
#  * Copyright (C) 2009, 2010, 2011, 2012, 2014, chys <admin@CHYS.INFO>
#  *
#  * This software is licensed under the 3-clause BSD license.
#  * See LICENSE in the source package and/or online info for details.
#  *
#  **********************************************************************/



AM_CPPFLAGS = -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LIBRARIES = libdiary.a

libdiary_a_SOURCES = \
	config.h \
	config.cpp \
	diary.h \
	file.h \
	file.cpp \
	filter.h \
	filter.cpp
