add_library(tiary_main STATIC
	dialog_all_labels.h
	dialog_all_labels.cpp
	dialog_edit_time.h
	dialog_edit_time.cpp
	dialog_filter.h
	dialog_filter.cpp
	dialog_global_pref.h
	dialog_global_pref.cpp
	dialog_labels.h
	dialog_labels.cpp
	dialog_open_recent.h
	dialog_open_recent.cpp
	dialog_perfile_pref.h
	dialog_perfile_pref.cpp
	dialog_view_edit.h
	dialog_view_edit.cpp
	doc.h
	doc.cpp
	mainui.h
	mainui.cpp
	mainctrl.h
	mainctrl.cpp
	mainwin.h
	mainwin.cpp
	stat.h
	stat.cpp
)
