# /***********************************************************************
#  *
#  * Tiary, a terminal-based diary keeping system for Unix-like systems
#  * Copyright (C) 2009, 2010, 2011, 2012, 2014, chys <admin@CHYS.INFO>
#  *
#  * This software is licensed under the 3-clause BSD license.
#  * See LICENSE in the source package and/or online info for details.
#  *
#  **********************************************************************/



AM_CPPFLAGS = -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LIBRARIES = libmain.a

libmain_a_SOURCES = \
	dialog_all_labels.h \
	dialog_all_labels.cpp \
	dialog_edit_time.h \
	dialog_edit_time.cpp \
	dialog_filter.h \
	dialog_filter.cpp \
	dialog_global_pref.h \
	dialog_global_pref.cpp \
	dialog_labels.h \
	dialog_labels.cpp \
	dialog_open_recent.h \
	dialog_open_recent.cpp \
	dialog_perfile_pref.h \
	dialog_perfile_pref.cpp \
	dialog_view_edit.h \
	dialog_view_edit.cpp \
	doc.h \
	doc.cpp \
	mainui.h \
	mainui.cpp \
	mainctrl.h \
	mainctrl.cpp \
	mainwin.h \
	mainwin.cpp \
	stat.h \
	stat.cpp
