add_library(tiary_ui
	button.h
	button.cpp
	chain.h
	checkbox.h
	checkbox.cpp
	control.h
	control.cpp
	dialog.h
	dialog.cpp
	dialog_input.h
	dialog_input.cpp
	dialog_message.h
	dialog_message.cpp
	dialog_richtext.h
	dialog_richtext.cpp
	dialog_select_file.h
	dialog_select_file.cpp
	direction.h
	droplist.h
	droplist.cpp
	fixed_dialog.h
	fixed_dialog.cpp
	hotkeys.h
	hotkeys.cpp
	label.h
	label.cpp
	layout.h
	layout.cpp
	listbox.h
	listbox.cpp
	menu.h
	menu.cpp
	menubar.h
	menubar.cpp
	ncurses_common.h
	ncurses_common.cpp
	object.h
	paletteid.h
	paletteid.cpp
	richtext.h
	richtext.cpp
	richtextlist.h
	richtextlist.cpp
	scroll.h
	scroll.cpp
	size.h
	terminal_emulator.h
	terminal_emulator.cpp
	textbox.h
	textbox.cpp
	ui.h
	ui.cpp
	uistring.h
	uistring.cpp
	window.h
	window.cpp
)
