add_library(tiary_ui
	button.h
	button.cpp
	button_default.h
	button_default.cpp
	chain.h
	checkbox.h
	checkbox.cpp
	control.h
	control.cpp
	dialog_input.h
	dialog_input.cpp
	dialog_message.h
	dialog_message.cpp
	dialog_richtext.h
	dialog_richtext.cpp
	dialog_search.h
	dialog_search.cpp
	dialog_select.h
	dialog_select.cpp
	dialog_select_file.h
	dialog_select_file.cpp
	direction.h
	droplist.h
	droplist.cpp
	fixed_dialog.h
	fixed_dialog.cpp
	hotkeys.h
	hotkeys.cpp
	label.h
	label.cpp
	layout.h
	layout.cpp
	listbox.h
	listbox.cpp
	menu.h
	menu.cpp
	menubar.h
	menubar.cpp
	movable_object.h
	ncurses_common.h
	ncurses_common.cpp
	object.h
	paletteid.h
	paletteid.cpp
	richtext.h
	richtext.cpp
	richtextlist.h
	richtextlist.cpp
	scroll.h
	scroll.cpp
	search_info.h
	search_info.cpp
	size.h
	terminal_emulator.h
	terminal_emulator.cpp
	textbox.h
	textbox.cpp
	ui.h
	ui.cpp
	uistring.h
	uistring.cpp
	window.h
	window.cpp
)
