add_library(tiary_ui STATIC
	button.h
	button.cpp
	button_default.h
	button_default.cpp
	chain.h
	checkbox.h
	checkbox.cpp
	checkbox_label.h
	checkbox_label.cpp
	control.h
	control.cpp
	date_select.h
	date_select.cpp
	dialog_input.h
	dialog_input.cpp
	dialog_message.h
	dialog_message.cpp
	dialog_richtext.h
	dialog_richtext.cpp
	dialog_search.h
	dialog_search.cpp
	dialog_select.h
	dialog_select.cpp
	dialog_select_file.h
	dialog_select_file.cpp
	direction.h
	droplist.h
	droplist.cpp
	fixed_window.h
	fixed_window.cpp
	grid_select.h
	grid_select.cpp
	hotkey_hint.h
	hotkey_hint.cpp
	hotkeys.h
	hotkeys.cpp
	label.h
	label.cpp
	layout.h
	layout.cpp
	listbox.h
	listbox.cpp
	menu.h
	menu.cpp
	menubar.h
	menubar.cpp
	mouse.h
	movable_object.h
	ncurses_common.h
	ncurses_common.cpp
	object.h
	output.h
	paletteid.h
	paletteid.cpp
	richtext.h
	richtext.cpp
	richtextlist.h
	richtextlist.cpp
	scroll.h
	scroll.cpp
	scrollbar.h
	scrollbar.cpp
	search_info.h
	search_info.cpp
	size.h
	terminal_emulator.h
	terminal_emulator.cpp
	textbox.h
	textbox.cpp
	ui.h
	ui.cpp
	uistring.h
	uistring.cpp
	uistring_base.h
	uistring_base.cpp
	uistring_one.h
	uistring_one.cpp
	window.h
	window.cpp
)
